@@ -53,6 +53,7 @@ use PerlACE::Run_Test;
 @files_run_pl = ();
 @files_generic = ();
 @files_doxygen = ();
+@files_conf = ();
 
 # To keep track of errors and warnings
 $errors = 0;
@@ -157,6 +158,9 @@ sub store_file ($)
     elsif ($name =~ /\.(doxygen)$/i) {
         push @files_doxygen, ($name);
     }
+    elsif ($name =~ /\.(conf)$/i) {
+        push @files_conf, ($name);
+    }
     elsif ($name =~ /\.(pm|cmd|java|sh|txt|xml)$/i) {
         push @files_generic, ($name);
     }
@@ -215,8 +219,9 @@ sub check_for_inline_in_cpp ()
 sub check_for_id_string ()
 {
     print "Running \$Id\$ string check\n";
-    foreach $file (@files_cpp, @files_inl, @files_h, @files_mpc, @files_bor, @files_gnu,
-                   @files_html, @files_idl, @files_pl, @makefile_files, @files_cdp, @files_py) {
+    foreach $file (@files_cpp, @files_inl, @files_h, @files_mpc, @files_bor,
+                   @files_gnu, @files_html, @files_idl, @files_pl,
+                   @makefile_files, @files_cdp, @files_py, @files_conf) {
         my $found = 0;
         if (open (FILE, $file)) {
             print "Looking at file $file\n" if $opt_d;
