@@ -1,3 +1,8 @@
+Thu Apr 21 12:25:13 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/fuzz.pl:
+          Check *.conf files for an Id tag
+
 Thu Apr 21 08:16:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_macosx.GNU:
